Add artplayer, artplayer-plugin-hls-quality, and hls.js dependencies Update epModalSlice to include player state Add Stream component to watch page Update Options component to toggle player for movies

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,24 @@ select {
   -webkit-appearance: none; /* Safari and Chrome */
   appearance: none;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #a8a6a6;
+  border-radius: 4px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #5c5b5b;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
